Prevent Long Log Messages from Overflowing Game Log

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -55,6 +55,7 @@ $card_height: 46px;
 #game-log {
   height: 250px;
   overflow: scroll;
+  width: 800px;
 }
 
 #hand {
